--- a/src/pages/coordinator/createOrder/createOrder.scss
+++ b/src/pages/coordinator/createOrder/createOrder.scss
@@ -9,12 +9,55 @@
         align-items: center;
         font-size: 40px;
         margin: 0;
-        svg{
+        svg {
             margin-right: 10px;
         }
     }
     .personalInformationFormsWrapper {
         display: flex;
+    }
+    .createOrderRoutes {
+        display: flex;
+        // color: white;
+        span {
+            margin-left: 12px;
+            display: flex;
+            align-items: center;
+            svg {
+                margin-left: 10px;
+            }
+            .senderAddress {
+                background-color: #f24822;
+                padding: 5px 10px;
+                border-radius: 10px;
+            }
+            .middleWarehouse {
+                display: flex;
+                align-items: center;
+                span {
+                    background-color: #ffcd29;
+                    padding: 5px 10px;
+                    border-radius: 10px;
+                }
+            }
+            .receiverAddress {
+                background-color: #14ae5c;
+                padding: 5px 10px;
+                border-radius: 10px;
+            }
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #0d99ff;
+            border-radius: 10px;
+            margin-right: 10px;
+            color: white;
+            transition: all ease 0.2s;
+            &:hover {
+                background-color: #1085d8;
+            }
+        }
+        padding: 0px 30px;
     }
 }
 .createOrderProductTableContainer {
@@ -28,7 +71,23 @@
         align-items: center;
         font-size: 40px;
         margin: 0;
-        svg{
+        svg {
+            margin-right: 10px;
+        }
+    }
+}
+.orderSummaryCreation {
+    background-color: white;
+    padding: 25px;
+    margin: 30px 20px;
+    box-shadow: 0px 10px 15px -4px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    h3 {
+        display: flex;
+        align-items: center;
+        font-size: 40px;
+        margin: 0;
+        svg {
             margin-right: 10px;
         }
     }
