--- a/src/pages/coordinator/createOrder/createOrder.scss
+++ b/src/pages/coordinator/createOrder/createOrder.scss
@@ -91,4 +91,29 @@
             margin-right: 10px;
         }
     }
+    .orderSummaryFeeContainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 25px;
+        padding: 10px;
+    }
+    .createOrderBtn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 15px;
+        button{
+            width: 100%;
+            padding: 10px 0px;
+            background-color: #0d99ff;
+            border-radius: 10px;
+            font-size: 20px;
+            color:white;
+            transition: all ease 0.2s;
+            &:hover{
+                background-color: #1085d8;
+            }
+        }
+    }
 }
