--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -25,6 +25,7 @@
             align-items: center;
             border-radius: 5px;
             padding: 15px 10px;
+            cursor: pointer;
             svg {
                 margin-right: 5px;
             }
