--- a/src/pages/admin/adminDashboard/adminDashboard.scss
+++ b/src/pages/admin/adminDashboard/adminDashboard.scss
@@ -38,13 +38,13 @@
           padding: 20px;
           box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
           border-radius: 15px;
-          width: 48%;
+          width: 260px;
           .left {
             span {
               font-size: 20px;
             }
             .bigNumber {
-              font-size: 80px;
+              font-size: 60px;
               font-weight: bold;
             }
           }
@@ -56,6 +56,9 @@
               border-radius: 10px;
             }
           }
+        }
+        .adminStatisticOrder:nth-child(2){
+          margin-left: 20px;
         }
       }
       .adminStatisticSale {
@@ -70,7 +73,7 @@
             font-size: 20px;
           }
           .bigNumber {
-            font-size: 80px;
+            font-size: 60px;
             font-weight: bold;
           }
         }
