--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,18 +4,120 @@
 
 .main-container {
     background-color: white;
-    margin-top: 100px;
+    height: 100vh;
+    // margin-top: 100px;
+    background: url(https://sapo.dktcdn.net/sso-service/images/background-bottom-pos-app.svg) no-repeat;
+    background-size: cover;
 
-    .sapo-logo {
-        width: 300px;
-        height: 110px;
-        background-image: url(https://sapo.dktcdn.net/sso-service/images/Sapo-logo.svg);
-        background-size: cover;
-        position: absolute;
-        left: 25vw;
-        top: 40vh;
-        animation: fadeIn 5s;
+    .MuiGrid-root {
+        display: flex;
+        align-items: center;
+        justify-items: center;
+
+        .sapo-logo {
+            width: 27vw;
+            height: 20vh;
+            background-image: url(https://sapo.dktcdn.net/sso-service/images/Sapo-logo.svg);
+            background-repeat: no-repeat;
+            background-size: contain;
+            margin-left: auto;
+            margin-right: auto;
+            animation: fadeIn 5s;
+        }
     }
 
+
+}
+
+@media screen and (max-width: 900px)and (min-height:1000px) {
+    main {
+        .MuiPaper-root {
+            height: 35vh !important;
+            margin-top: -15vh;
+        }
+    }
+
+    .sapo-logo {
+        width: 30vw !important;
+        height: 9vh !important;
+        position: absolute !important;
+        left: 35vw !important;
+        top: 4vh !important;
+
+    }
+}
+
+@media screen and (max-width: 900px)and (max-height:999px) {
+    main {
+        .MuiPaper-root {
+            height: 55vh !important;
+            margin-top: 29vh;
+        }
+    }
+
+    .sapo-logo {
+        width: 30vw !important;
+        height: 9vh !important;
+        position: absolute !important;
+        left: 39vw !important;
+        top: 14vh !important;
+
+    }
+}
+
+@media screen and (max-width: 415px)and (min-height:800px) {
+    main {
+        .MuiPaper-root {
+            height: 40vh !important;
+            margin-top: 0;
+        }
+    }
+
+    .sapo-logo {
+        width: 35vw !important;
+        height: 9vh !important;
+        position: absolute !important;
+        left: 33vw !important;
+        top: 10vh !important;
+
+    }
+
+}
+
+@media screen and (max-width: 415px)and (max-height:799px) {
+    main {
+        .MuiPaper-root {
+            height: 55vh !important;
+        }
+    }
+
+    .sapo-logo {
+        width: 35vw !important;
+        height: 9vh !important;
+        position: absolute !important;
+        left: 33vw !important;
+        top: 10vh !important;
+
+    }
+
+}
+
+@media screen and (min-width: 912px) and (min-height:1000px) {
+    main {
+        .MuiPaper-root {
+            height: 27vh !important;
+        }
+    }
+
+    .sapo-logo {
+        display: flex;
+        align-items: center;
+        width: 32vw !important;
+        height: 9vh !important;
+        position: absolute !important;
+        left: 14vw !important;
+        top: 20vh !important;
+
+    }
 
 }
