--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -26,8 +26,20 @@
         }
     }
 
+    .form-box {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
+        .form-title {
+            height: 10%;
+        }
 
+        .form-input-text {
+            height: 70%;
+        }
+    }
 
 
 }
