--- a/src/pages/shipper/shippingOrder/shipperAllOrders.scss
+++ b/src/pages/shipper/shippingOrder/shipperAllOrders.scss
@@ -5,7 +5,10 @@
 
     .topMenu {
         width: 100%;
-        height: 15vh;
+        height: 17vh;
+        position: sticky;
+        z-index: 999;
+        margin-bottom: 20px;
 
         .topMenuTitle {
             text-align: center;
@@ -26,6 +29,7 @@
         }
 
         .topMenuDate {
+            z-index: 999;
             margin-top: 20px;
             font-size: 20px;
             font-weight: bold;
@@ -54,7 +58,7 @@
                         width: 15%;
                         display: flex;
                         flex-direction: column;
-                        padding: 15px;
+                        padding: 10px;
 
                         .orderDay {
                             font-size: 20px;
