--- a/src/pages/coordinator/coordinatorShipperList/coordinatorShipperList.scss
+++ b/src/pages/coordinator/coordinatorShipperList/coordinatorShipperList.scss
@@ -24,10 +24,9 @@
             background-color: #14ae5c;
             border-radius: 50px;
             color: white;
-            transition: all ease 2s;
+            transition: all ease 0.2s;
             &:hover{
-                background-color: red;
-                width: 200px;
+                background-color: #128548;
             }
         }
     }
