--- a/src/pages/admin/adminDashboard/adminDashboard.scss
+++ b/src/pages/admin/adminDashboard/adminDashboard.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   .adminOverviewTilesContainer {
-    display: flex;
     padding: 20px 20px;
     background-color: white;
     padding: 25px;
@@ -11,8 +10,6 @@
     border-radius: 15px;
     justify-content: space-between;
     .adminOverviewSumSale {
-      width: 45%;
-      height: 35%;
       h3 {
         display: flex;
         align-items: center;
@@ -23,66 +20,73 @@
           margin-right: 10px;
         }
       }
-    }
-    .adminOverviewStatistic {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      .adminStatisticOrders {
+      .adminOverviewWrap {
         display: flex;
         justify-content: space-between;
-        .adminStatisticOrder {
-          background-color: rgb(223, 223, 223);
+        .profitChartWrapper {
+          width: 700px;
+        }
+        .adminOverviewStatistic {
           display: flex;
-          justify-content: space-between;
-          padding: 20px;
-          box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
-          border-radius: 15px;
-          width: 260px;
-          .left {
-            span {
-              font-size: 20px;
+          flex-direction: column;
+          gap: 20px;
+          .adminStatisticOrders {
+            display: flex;
+            justify-content: space-between;
+            .adminStatisticOrder {
+              background-color: rgb(223, 223, 223);
+              display: flex;
+              justify-content: space-between;
+              padding: 20px;
+              box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+              border-radius: 15px;
+              width: 260px;
+              .left {
+                span {
+                  font-size: 20px;
+                }
+                .bigNumber {
+                  font-size: 60px;
+                  font-weight: bold;
+                }
+              }
+              .right {
+                svg {
+                  font-size: 60px;
+                  padding: 10px;
+                  border: 1px solid black;
+                  border-radius: 10px;
+                }
+              }
             }
-            .bigNumber {
-              font-size: 60px;
-              font-weight: bold;
+            .adminStatisticOrder:nth-child(2) {
+              margin-left: 20px;
             }
           }
-          .right {
-            svg {
-              font-size: 60px;
-              padding: 10px;
-              border: 1px solid black;
-              border-radius: 10px;
+          .adminStatisticSale {
+            background-color: rgb(223, 223, 223);
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+            box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            .left {
+              span {
+                font-size: 20px;
+              }
+              .bigNumber {
+                font-size: 60px;
+                font-weight: bold;
+              }
             }
-          }
-        }
-        .adminStatisticOrder:nth-child(2){
-          margin-left: 20px;
-        }
-      }
-      .adminStatisticSale {
-        background-color: rgb(223, 223, 223);
-        display: flex;
-        justify-content: space-between;
-        padding: 20px;
-        box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
-        border-radius: 15px;
-        .left {
-          span {
-            font-size: 20px;
-          }
-          .bigNumber {
-            font-size: 60px;
-            font-weight: bold;
-          }
-        }
-        .right {
-          svg {
-            font-size: 60px;
-            padding: 10px;
-            border: 1px solid black;
-            border-radius: 10px;
+            .right {
+              svg {
+                font-size: 60px;
+                padding: 10px;
+                border: 1px solid black;
+                border-radius: 10px;
+              }
+            }
           }
         }
       }
@@ -103,6 +107,11 @@
       svg {
         margin-right: 10px;
       }
+    }
+    .titleWrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
   }
 }
