--- a/src/pages/coordinator/coordinatorDashboard/coordinatorDashboard.scss
+++ b/src/pages/coordinator/coordinatorDashboard/coordinatorDashboard.scss
@@ -52,14 +52,19 @@
     margin: 30px 20px;
     box-shadow: 0px 10px 15px -4px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
-    h3 {
+    .titleWrapper {
         display: flex;
+        justify-content: space-between;
         align-items: center;
-        font-size: 40px;
-        margin: 0;
-        margin-bottom: 20px;
-        svg {
-            margin-right: 10px;
+        h3 {
+            display: flex;
+            align-items: center;
+            font-size: 40px;
+            margin: 0;
+            margin-bottom: 20px;
+            svg {
+                margin-right: 10px;
+            }
         }
     }
 }
