--- a/src/pages/shopOwner/shopOwnerDashboard/shopOwnerDashboard.scss
+++ b/src/pages/shopOwner/shopOwnerDashboard/shopOwnerDashboard.scss
@@ -16,7 +16,7 @@
     .shopOwnerOverviewTilesContainer {
         margin: 30px 0px;
         display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-columns: repeat(4, minmax(0, 1fr));
         gap: 30px;
         .shopOwnerOverviewTile {
             background-color: rgb(223, 223, 223);
@@ -27,16 +27,16 @@
             border-radius: 15px;
             .left {
                 span {
-                    font-size: 30px;
+                    font-size: 25px;
                 }
                 .bigNumber {
-                    font-size: 90px;
+                    font-size: 50px;
                     font-weight: bold;
                 }
             }
             .right {
                 svg {
-                    font-size: 80px;
+                    font-size: 70px;
                     padding: 10px;
                     border: 1px solid black;
                     border-radius: 10px;
@@ -61,5 +61,10 @@
         svg {
             margin-right: 10px;
         }
+    }
+    .titleWrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
