--- a/src/pages/common/orderDetail/orderDetail.scss
+++ b/src/pages/common/orderDetail/orderDetail.scss
@@ -7,7 +7,7 @@
     h3 {
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0;
         margin-bottom: 20px;
         svg {
@@ -89,7 +89,7 @@
     h3 {
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0;
         margin-bottom: 20px;
         svg {
@@ -110,12 +110,16 @@
     h3 {
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0;
         margin-bottom: 20px;
         svg {
             margin-right: 10px;
         }
+    }
+    .orderDetailProductTable{
+        margin-top: 20px;
+        padding: 20px 60px;
     }
 }
 .orderDetailJourneyContainer {
@@ -127,7 +131,7 @@
     h3 {
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0;
         margin-bottom: 20px;
         svg {
@@ -233,7 +237,7 @@
     h3 {
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0;
         margin-bottom: 20px;
         svg {
