--- a/src/components/createOrderPersonalInfoForm/createOrderPersonalInfoForm.scss
+++ b/src/components/createOrderPersonalInfoForm/createOrderPersonalInfoForm.scss
@@ -1,10 +1,10 @@
 .createOrderPersonalInfoFormContainer{
     flex:1;
-    padding: 30px;
     .personalInfoFormTitle{
         display: flex;
         align-items: center;
-        font-size: 25px;
+        font-size: 20px;
+        margin-bottom: 20px;
         svg{
             margin-right: 10px;
         }
