--- a/src/pages/coordinator/coordinatorShipperList/coordinatorShipperList.scss
+++ b/src/pages/coordinator/coordinatorShipperList/coordinatorShipperList.scss
@@ -1,7 +1,7 @@
 .shippersTableContainer {
     background-color: white;
     padding: 25px;
-    margin: 30px 20px;
+    margin: 30px 120px;
     box-shadow: 0px 10px 15px -4px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     h3 {
@@ -18,7 +18,7 @@
         justify-content: space-between;
         align-items: center;
         margin: 20px 0px;
-        .modalWrapper{
+        .modalWrapper {
             min-width: 500px;
             display: flex;
             justify-content: space-between;
@@ -26,14 +26,9 @@
         .shipperTableAddEmployeeBtn {
             font-size: 17px;
             button {
-                padding: 10px 15px;
-                background-color: #14ae5c;
-                border-radius: 50px;
                 color: white;
+                width: 100%;
                 transition: all ease 0.2s;
-                &:hover {
-                    background-color: #128548;
-                }
             }
         }
     }
