--- a/src/pages/common/orderDetail/orderDetail.scss
+++ b/src/pages/common/orderDetail/orderDetail.scss
@@ -34,7 +34,7 @@
             div {
                 display: inline-block;
                 text-align: center;
-                width: 60px;
+                width: 50px;
                 font-size: 15px;
                 margin-top: -50px;
                 color: transparent;
@@ -49,7 +49,7 @@
                 align-items: center;
                 justify-content: center;
                 padding: 15px;
-                font-size: 50px;
+                font-size: 40px;
                 border: 2px solid black;
                 border-radius: 50%;
             }
@@ -119,7 +119,6 @@
     }
     .orderDetailProductTable{
         margin-top: 20px;
-        padding: 20px 60px;
     }
 }
 .orderDetailJourneyContainer {
@@ -185,6 +184,8 @@
                         border-radius: 50%;
                         background-color: gray;
                         color: rgba(128, 128, 128, 0.5);
+                        height: 26px;
+                        width: 26px;
                     }
 
                     .statusDetailWrapper {
@@ -249,37 +250,5 @@
         align-items: center;
         font-size: 20px;
         padding: 10px;
-    }
-    .cancelOrderBtn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 15px;
-        width: 100%;
-        padding: 10px 0px;
-        background-color: #f24822;
-        border-radius: 10px;
-        font-size: 20px;
-        color: white;
-        transition: all ease 0.2s;
-        &:hover {
-            background-color: #d23f1e;
-        }
-    }
-    .changeStatusOrderBtn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 15px;
-        width: 100%;
-        padding: 10px 0px;
-        background-color: #0d99ff;
-        border-radius: 10px;
-        font-size: 20px;
-        color: white;
-        transition: all ease 0.2s;
-        &:hover {
-            background-color: #0a7dcf;
-        }
     }
 }
