--- a/src/pages/shipper/shippingOrder/shipperAllOrders.scss
+++ b/src/pages/shipper/shippingOrder/shipperAllOrders.scss
@@ -5,7 +5,7 @@
 
     .topMenu {
         width: 100%;
-        height: 17vh;
+        height: 15vh;
         position: sticky;
         z-index: 999;
         margin-bottom: 20px;
@@ -21,10 +21,11 @@
             width: 100%;
             display: flex;
             flex-direction: row;
-
+            
             button {
+                border: none;
                 width: 50%;
-                height: 40px
+                height: 40px;
             }
         }
 
@@ -81,9 +82,11 @@
                         height: 35px;
                         border-radius: 20px;
                         padding: 5px;
-                        text-align: center;
                         background-color: rgb(228, 228, 228);
                         color: white;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                     }
                 }
 
@@ -92,11 +95,13 @@
                     background-color: #0088ff;
                     color: white;
                     border-radius: 15px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
     }
-
 
     .botBar {
         display: flex;
@@ -117,6 +122,5 @@
             text-align: center;
             align-items: center;
         }
-
     }
 }
