--- a/src/pages/admin/adminDashboard/adminDashboard.scss
+++ b/src/pages/admin/adminDashboard/adminDashboard.scss
@@ -20,12 +20,10 @@
         }
       }
       .adminOverviewWrap {
-        display: flex;
-        justify-content: space-between;
         .profitChartWrapper {
-          width: 600px;
-          display: flex;
-          align-items: center;
+          canvas {
+            width: 100%;
+          }
         }
         .adminOverviewStatistic {
           display: flex;
@@ -33,36 +31,33 @@
           gap: 20px;
           .adminStatisticOrders {
             display: flex;
-            justify-content: space-between;
+            gap: 20px;
             .adminStatisticOrder {
+              flex: 1;
               background-color: rgb(223, 223, 223);
               display: flex;
               justify-content: space-between;
-              padding:  20px;
+              padding: 20px;
               box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
               border-radius: 15px;
-              width: 260px;
               .left {
                 span {
                   font-size: 17px;
                 }
                 .bigNumber {
-                  font-size: 50px;
+                  margin-top: 15px;
+                  font-size: 40px;
                   font-weight: bold;
-                  padding: 10px 0px
                 }
               }
               .right {
                 svg {
-                  font-size: 60px;
+                  font-size: 40px;
                   padding: 10px;
                   border: 1px solid black;
                   border-radius: 10px;
                 }
               }
-            }
-            .adminStatisticOrder:nth-child(2) {
-              margin-left: 20px;
             }
           }
           .adminStatisticSale {
@@ -74,17 +69,17 @@
             border-radius: 15px;
             .left {
               span {
-                font-size: 20px;
+                font-size: 17px;
               }
               .bigNumber {
-                font-size: 60px;
+                margin-top: 15px;
+                font-size: 40px;
                 font-weight: bold;
-                padding: 15px 0px;
               }
             }
             .right {
               svg {
-                font-size: 60px;
+                font-size: 40px;
                 padding: 10px;
                 border: 1px solid black;
                 border-radius: 10px;
