--- a/src/pages/admin/adminDashboard/adminDashboard.scss
+++ b/src/pages/admin/adminDashboard/adminDashboard.scss
@@ -90,26 +90,26 @@
       }
     }
   }
-  .adminListTableContainer {
+  .adminLowerItem {
     background-color: white;
     padding: 25px;
-    margin: 30px 120px;
+    margin: 30px 0px;
     box-shadow: 0px 10px 15px -4px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     h3 {
       display: flex;
       align-items: center;
-      font-size: 30px;
+      font-size: 25px;
       margin: 0;
-      margin-bottom: 20px;
       svg {
         margin-right: 10px;
       }
     }
-    .titleWrapper {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+
+    canvas{
+      margin-top: -40px;
+      width: 470px !important; 
+      height: 470px !important; 
     }
   }
 }
