--- a/src/pages/shopOwner/shopOwnerDashboard/shopOwnerDashboard.scss
+++ b/src/pages/shopOwner/shopOwnerDashboard/shopOwnerDashboard.scss
@@ -79,3 +79,20 @@
         justify-content: space-between;
     }
 }
+
+.shopOwnerLowerItem {
+    background-color: white;
+    padding: 25px;
+    // margin: 30px 0px;
+    box-shadow: 0px 10px 15px -4px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    h3 {
+        display: flex;
+        align-items: center;
+        font-size: 25px;
+        margin: 0;
+        svg {
+            margin-right: 10px;
+        }
+    }
+}
